# nerveBall

./: .gitignore  CMakeLists.txt  CMakeLists.txt.macos  nb  nerveBall.cpp  nerveBall.h  np  readme.md  scores.txt  synth.cpp  synth.h  synthTest  testSynth  testSynth.cpp
